<resources>
    <string name="app_name">Connect Class Assistance</string>
    <string name="logged_in_as">Logged In As ..</string>
    <string name="teacher">Teacher</string>
    <string name="student">Student</string>
    <string name="input_email">Input Email</string>
    <string name="input_password">Input Password</string>
    <string name="login">Login</string>
    <string name="submit">Submit</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
</resources>
