<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.aclass.connect.connectclassassistance.LoginActivity">

    <RelativeLayout
        android:id="@+id/logoLay"
        android:layout_width="match_parent"
        android:layout_height="150dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logoLay"
        android:layout_margin="50dp">

        <TextView
            android:id="@+id/loginText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logged_in_as"
            android:textAlignment="center"/>

        <Button
            android:id="@+id/teacherLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/teacher"
            android:layout_below="@id/loginText"
            android:layout_marginTop="20dp"/>

        <Button
            android:id="@+id/studentLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/student"
            android:layout_below="@id/teacherLogin"
            android:layout_marginTop="10dp"/>

    </RelativeLayout>

</android.widget.RelativeLayout>
